--- a/cuda.vcxproj.filters
+++ b/cuda.vcxproj.filters
@@ -34,6 +34,9 @@
     <ClInclude Include="src\rt\persistentds\CudaPoolKDTree.hpp">
       <Filter>persistentds</Filter>
     </ClInclude>
+    <ClInclude Include="src\rt\persistentds\CudaPoolSBVH.hpp">
+      <Filter>persistentds</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="src\rt\kernels\fermi_speculative_while_while.cu">
@@ -103,6 +106,9 @@
       <Filter>persistentds</Filter>
     </CudaCompile>
     <CudaCompile Include="src\rt\persistentds\alloc_common.cu">
+      <Filter>persistentds</Filter>
+    </CudaCompile>
+    <CudaCompile Include="src\rt\persistentds\persistent_sbvh.cu">
       <Filter>persistentds</Filter>
     </CudaCompile>
   </ItemGroup>
