Fix some more bugs

--- a/config.conf
+++ b/config.conf
@@ -101,6 +101,14 @@ popCount 14
 granularity 50.0
 }
 
+PersistentSBVH {
+# Memory settings
+nodeRatio 5
+triRatio 3
+idxRatio 12
+heapMultiplicator 20
+}
+
 PersistentKDTree {
 # Hard termination criteria
 triLimit 16
