--- a/rt.vcxproj.filters
+++ b/rt.vcxproj.filters
@@ -125,6 +125,9 @@
     <ClCompile Include="src\rt\persistentds\CudaPersistentSBVHBuilder.cpp">
       <Filter>persistentds</Filter>
     </ClCompile>
+    <ClCompile Include="src\rt\tools\BvhInspector.cpp">
+      <Filter>tools</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\rt\bvh\BVH.hpp">
@@ -230,6 +233,9 @@
     </ClInclude>
     <ClInclude Include="src\rt\persistentds\CudaPersistentSBVHBuilder.hpp">
       <Filter>persistentds</Filter>
+    </ClInclude>
+    <ClInclude Include="src\rt\tools\BvhInspector.h">
+      <Filter>tools</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
