--- a/config.conf
+++ b/config.conf
@@ -16,10 +16,10 @@ measureRepeats 5
 
 Renderer {
 # Acceleration structures currently supported = [BVH, KDTree]
-dataStructure BVH
+dataStructure KDTree
 # BVH construction currently supported = [SplitBVH, SAHBVH, OcclusionBVH, HLBVH, PersistentBVH, PersistentSBVH]
 # KDTree construction currently supported = [SpatialMedianKDTree, SAHKDTree, PersistentKDTree]
-builder PersistentSBVH
+builder PersistentKDTree
 
 #rayType primary AO diffuse
 rayType primary
