--- a/framework.vcxproj
+++ b/framework.vcxproj
@@ -22,6 +22,7 @@
     <ProjectGuid>{8E0B71BD-6F14-4F0C-AC34-45985043856F}</ProjectGuid>
     <RootNamespace>framework</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
