--- a/rt.vcxproj
+++ b/rt.vcxproj
@@ -23,6 +23,7 @@
     <RootNamespace>rt</RootNamespace>
     <Keyword>Win32Proj</Keyword>
     <ProjectName>NTrace</ProjectName>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
