--- a/config.conf
+++ b/config.conf
@@ -16,10 +16,10 @@ measureRepeats 5
 
 Renderer {
 # Acceleration structures currently supported = [BVH, KDTree]
-dataStructure KDTree
+dataStructure BVH
 # BVH construction currently supported = [SplitBVH, SAHBVH, OcclusionBVH, HLBVH, PersistentBVH, PersistentSBVH]
 # KDTree construction currently supported = [SpatialMedianKDTree, SAHKDTree, PersistentKDTree]
-builder PersistentKDTree
+builder PersistentSBVH
 
 #rayType primary AO diffuse
 rayType primary
