--- a/config.conf
+++ b/config.conf
@@ -102,11 +102,21 @@ granularity 50.0
 }
 
 PersistentSBVH {
+# Hard termination criteria
+triLimit 16
+triMaxLimit 512
+maxDepth 50
+# Soft termination criteria
+ci 1
+ct 1
 # Memory settings
 nodeRatio 5
 triRatio 3
 idxRatio 12
 heapMultiplicator 25
+# Dequeue setting
+popCount 14
+granularity 50.0
 }
 
 PersistentKDTree {
