--- a/config.conf
+++ b/config.conf
@@ -105,7 +105,7 @@ PersistentSBVH {
 # Hard termination criteria
 triLimit 16
 triMaxLimit 512
-maxDepth 50
+maxDepth 64
 # Soft termination criteria
 ci 1
 ct 1
@@ -117,6 +117,8 @@ heapMultiplicator 25
 # Dequeue setting
 popCount 14
 granularity 50.0
+# SBVH settings
+maxDepthSpatialSplit 20
 }
 
 PersistentKDTree {
